--- a/.github/workflows/veracode-scan.yml
+++ b/.github/workflows/veracode-scan.yml
@@ -4,25 +4,10 @@ on:
     branches:
     - main
 jobs:
-  veracode-scan-job:
+  log-github-event-goodies:
+    name: "LOG Everything on GitHub Event"
     runs-on: ubuntu-latest
     steps:
-      - name : Fetch commit messages
-        uses: rlespinasse/git-commit-data-action@v1
-      - name: Print git commit data
+      - name: Logging
         run: |
-            echo "Get commit info"
-            echo " - ${{ env.GIT_COMMIT_SHA }}"
-            echo " - ${{ env.GIT_COMMIT_SHORT_SHA }}"
-            echo "Get author info"
-            echo " - ${{ env.GIT_COMMIT_AUTHOR }}"
-            echo " - ${{ env.GIT_COMMIT_AUTHOR_NAME }}"
-            echo " - ${{ env.GIT_COMMIT_AUTHOR_EMAIL }}"
-            echo "Get committer info"
-            echo " - ${{ env.GIT_COMMIT_COMMITTER }}"
-            echo " - ${{ env.GIT_COMMIT_COMMITTER_NAME }}"
-            echo " - ${{ env.GIT_COMMIT_COMMITTER_EMAIL }}"
-            echo "Get message info"
-            echo " - ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}"
-            echo " - ${{ env.GIT_COMMIT_MESSAGE_SUBJECT_SANITIZED }}"
-            echo " - ${{ env.GIT_COMMIT_MESSAGE_BODY }}"
+          echo "${{toJSON(github.event)}}"
