--- a/.github/workflows/veracode-scan.yml
+++ b/.github/workflows/veracode-scan.yml
@@ -5,7 +5,18 @@ jobs:
   main_job:
     runs-on: ubuntu-latest
     steps:
-    - name: print values
-      env:
-        commit_msg: ${{ github.event.workflow_run.head_commit.message }}
-      run: echo ${{ github.event.workflow_run.head_commit.message }}
+    - name: Expose git commit data
+      uses: jcputney/git-commit-data-action@v1.x
+
+    - name: Print git commit data
+      run: |
+          echo "Get author info"
+          echo " - ${{ env.GIT_COMMIT_AUTHOR }}"
+          echo " - ${{ env.GIT_COMMIT_AUTHOR_NAME }}"
+          echo " - ${{ env.GIT_COMMIT_AUTHOR_EMAIL }}"
+          echo "Get committer info"
+          echo " - ${{ env.GIT_COMMIT_COMMITTER }}"
+          echo " - ${{ env.GIT_COMMIT_COMMITTER_NAME }}"
+          echo " - ${{ env.GIT_COMMIT_COMMITTER_EMAIL }}"
+          echo "Get commit info"
+          echo " - ${{ env.GIT_COMMIT_MESSAGE }}"
