--- a/.github/workflows/veracode-scan.yml
+++ b/.github/workflows/veracode-scan.yml
@@ -5,18 +5,8 @@ jobs:
   main_job:
     runs-on: ubuntu-latest
     steps:
-    - name: Expose git commit data
-      uses: jcputney/git-commit-data-action@v1.x
-
-    - name: Print git commit data
+    - name: commit
       run: |
-          echo "Get author info"
-          echo " - ${{ env.GIT_COMMIT_AUTHOR }}"
-          echo " - ${{ env.GIT_COMMIT_AUTHOR_NAME }}"
-          echo " - ${{ env.GIT_COMMIT_AUTHOR_EMAIL }}"
-          echo "Get committer info"
-          echo " - ${{ env.GIT_COMMIT_COMMITTER }}"
-          echo " - ${{ env.GIT_COMMIT_COMMITTER_NAME }}"
-          echo " - ${{ env.GIT_COMMIT_COMMITTER_EMAIL }}"
-          echo "Get commit info"
-          echo " - ${{ env.GIT_COMMIT_MESSAGE }}"
+          # Get last commit message
+            readonly local last_commit_log=$(git log -1 --pretty=format:"%s")
+            echo "last commit log: $last_commit_log"
